--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -3,18 +3,18 @@
         <div class="form-group">
             <mat-form-field appearance="outline">
                 <mat-label>New password</mat-label>
-                <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="password">
-                <button mat-icon-button matSuffix (click)="hideFlag = !hideFlag" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag">
-                    <mat-icon>{{ hideFlag ? 'visibility_off' : 'visibility' }}</mat-icon>
+                <input matInput [type]="hideFlag1 ? 'password' : 'text'" formControlName="password">
+                <button mat-icon-button matSuffix (click)="hideFlag1 = !hideFlag1" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag1">
+                    <mat-icon>{{ hideFlag1 ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
                 <mat-error *ngIf="resetPasswordForm.controls.password.invalid">{{ getPasswordErrorMessage() }}</mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
                 <mat-label>Confirm new password</mat-label>
-                <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="confirmPassword">
-                    <button mat-icon-button matSuffix (click)="hideFlag = !hideFlag" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag">
-                <mat-icon>{{ hideFlag ? 'visibility_off' : 'visibility' }}</mat-icon>
+                <input matInput [type]="hideFlag2 ? 'password' : 'text'" formControlName="confirmPassword">
+                    <button mat-icon-button matSuffix (click)="hideFlag2 = !hideFlag2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag2">
+                <mat-icon>{{ hideFlag2 ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
                 <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.invalid">{{ getConfirmPasswordError() }}</mat-error>
             </mat-form-field>
