Integrated get discipline endpoint

--- a/src/app/discipline-details/discipline-details.component.html
+++ b/src/app/discipline-details/discipline-details.component.html
@@ -1,10 +1,10 @@
 <div class="discipline-details">
     <header class="name">
-        <h2>{{discipline.name}}</h2>
+        <h2>{{discipline?.name}}</h2>
     </header>
 
     <div class="details">
-        <div *ngFor="let timetable of discipline.timetable">
+        <div *ngFor="let timetable of discipline?.timetable">
             {{ timetable.option }}
             {{ getAvailablePlaces(timetable.option) }}
         </div>
