--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -19,7 +19,7 @@
     </div> -->
 
     <div class="disciplines-tab">
-        <div *ngIf="disciplines.length > 0; else noDisciplines" class="disciplines-table">
+        <div *ngIf="userDisciplines?.length > 0; else noDisciplines" class="disciplines-table">
             <div class="table-add-button">
                 <button mat-button (click)="openDialog()"><mat-icon>add_circle</mat-icon>Add discipline</button>
             </div>
