--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,46 @@
-<p>admin-dashboard works!</p>
+<div class="disciplines-container">
+    <div class="disciplines-tab">
+        <div *ngIf="mockDisciplines?.length > 0; else noDisciplines" class="disciplines-table">
+            <div class="table-add-button">
+                <button mat-button (click)="openDialog()"><mat-icon>add_circle</mat-icon>Add discipline</button>
+            </div>
+
+            <table mat-table [dataSource]="myDataSource" matSort class="mat-elevation-z8" width="100%">
+                <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                </ng-container>
+                <ng-container matColumnDef="teacher">
+                    <th mat-header-cell *matHeaderCellDef>Teacher</th>
+                    <td mat-cell *matCellDef="let element">{{element.teacher}}</td>
+                    </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef>
+                        actions
+                    </th>
+                    <td mat-cell *matCellDef="let element" class="no-field-padding">
+                        <div class="icons">
+                        <button mat-button>
+                            <mat-icon class="delete-icon" (click)="unenrollUser(element._id, $event)">delete</mat-icon>
+                        </button>
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="['name', 'teacher', 'actions']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['name', 'teacher', 'actions']" (click)="getSelectedRow(row)"></tr>
+            </table>
+        </div>
+    <div>
+
+    <ng-template #noDisciplines>
+        <div class="no-discipline">
+            <button mat-button (click)="openDialog()">
+                <span class="add-button">
+                    <mat-icon class="add-icon">library_add</mat-icon>
+                    Add discipline
+                </span>
+            </button>
+            You've not selected any discipline
+        </div>
+    </ng-template>
+</div>
