Basic formArray added for dynamic number of timetable options

--- a/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
+++ b/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
@@ -86,6 +86,10 @@
         </mat-option>
       </mat-select> 
     </mat-form-field> 
+    <button mat-button (click)="addTimetable()">Add Timetable Option</button>
+    <div formArrayName="timetable" *ngFor="let option of dynamicTimetable.controls; let i=index">
+      <input type="text" [formControlName]="i">
+    </div>
 </div>
 
 <div mat-dialog-actions align="end">
