Fixed issue with double fetching timetable and added delete timetable button

--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.html
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.html
@@ -77,6 +77,24 @@
                     </mat-select> 
                     <mat-error *ngIf="disciplineDetailsForm.controls.studyYear.invalid">Please complete study year</mat-error>
                 </mat-form-field>
+
+                <button mat-button (click)="addTimetable()">Add Timetable Option</button>
+
+                <div formArrayName="timetable" *ngFor="let timetableOption of dynamicTimetable.controls; let i=index">
+                <div class="lesson-form-row" [formGroup]="timetableOption">
+                    <mat-form-field>
+                    <mat-label>Option #{{i}}</mat-label>
+                    <input matInput type="text" formControlName="option">
+                    </mat-form-field>
+                    <button mat-button>
+                        <mat-icon class="delete-btn" (click)="deleteTimetable(i)">
+                            delete</mat-icon>
+                    </button>
+                    <button mat-button>
+                        <mat-icon>people</mat-icon>
+                    </button>
+                </div>
+                </div>
             </div>
         </form>
         <button class="submit-button" mat-raised-button (click)="submit()" [disabled]="!disciplineDetailsForm.touched">SAVE</button>
