--- a/src/app/discipline-preferences/discipline-preferences.component.html
+++ b/src/app/discipline-preferences/discipline-preferences.component.html
@@ -1,6 +1,6 @@
 <div class="discipline-preferences">
 
-    <form [formGroup]="preferencesForm">
+    <!-- <form [formGroup]="preferencesForm">
         <div class="form-group">
             <mat-form-field appearance="outline">
                     <mat-label>Option 1</mat-label>
@@ -12,7 +12,28 @@
                 <mat-error *ngIf="preferencesForm.controls.option1.invalid">Please complete option</mat-error>
             </mat-form-field>
         </div>
-    </form>
+    </form> -->
+    <form [formGroup]="preferencesForm">
+      <div class="form-group">
+          <mat-form-field appearance="outline" *ngFor="let preference of discipline.timetable; let i=index">
+                  <mat-label>Option {{i}}</mat-label>
+                  <mat-select formControlName="option1">
+                    <mat-option *ngFor="let selectedPreference of discipline.timetable;"  [value]="selectedPreference">
+                      {{ selectedPreference.option }}
+                    </mat-option>
+                  </mat-select>    
+              <!-- <mat-error *ngIf="preferencesForm.controls.option1.invalid">Please complete option</mat-error> -->
+          </mat-form-field>
+      </div>
+  </form>
+  <!-- <div formArrayName="timetable" *ngFor="let timetableOption of dynamicTimetable.controls; let i=index">
+    <div class="lesson-form-row" [formGroup]="timetableOption">
+        <mat-form-field>
+        <mat-label>Option #{{i}}</mat-label>
+        <input matInput type="text" formControlName="option">
+        </mat-form-field>
+    </div>
+    </div> -->
     <button class="submit-button" mat-raised-button (click)="submit()" [disabled]="preferencesForm.invalid">SAVE</button>
 
 </div>
