Made some minor fixes on styles

--- a/src/app/delete-user/delete-user.component.html
+++ b/src/app/delete-user/delete-user.component.html
@@ -1,3 +1,4 @@
 <div class="delete-account-container">
+    <mat-icon>delete</mat-icon>
     <button class="delete-button" mat-raised-button (click)="openDialog()">DELETE</button>
 </div>
