--- a/src/app/discipline-preferences/discipline-preferences.component.html
+++ b/src/app/discipline-preferences/discipline-preferences.component.html
@@ -25,5 +25,5 @@
   <button class="submit-button" mat-raised-button (click)="submit()" [disabled]="preferencesForm.invalid">SAVE</button>
   <!-- TODO: add a button to send discipline preferences -->
   <button class="submit-button" mat-raised-button (click)="sendPreference()" [disabled]="isSentOptionDisabled()">Send preference</button>
-  <button class="submit-button" mat-raised-button (click)="resetPreferences()" [disabled]="isResetDisabled()">Reset</button>
+  <button class="submit-button" mat-raised-button (click)="resetPreferences()" [disabled]="isResetDisabled()">Delete option</button>
 </div>
