--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -22,7 +22,7 @@
     .table-add-button {
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: flex-start;
     }
 }
 
@@ -91,7 +91,7 @@
         row-gap: 3em;
 
         .discipline-card {
-            width: 400px;
+            width: 350px;
         }
     }
 }
