--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -5,33 +5,37 @@
                 <button mat-button (click)="openDialog()"><mat-icon>add_circle</mat-icon>Add discipline</button>
             </div>
 
-            <table mat-table [dataSource]="myDataSource" matSort class="mat-elevation-z8" width="100%">
-                <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let element">{{element.name}}</td>
-                </ng-container>
-                <ng-container matColumnDef="teacher">
-                    <th mat-header-cell *matHeaderCellDef>Teacher</th>
-                    <td mat-cell *matCellDef="let element">{{element.teacher}}</td>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="myDataSource" width="100%">
+                    <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                    <td mat-cell *matCellDef="let element">{{element.name}}</td>
                     </ng-container>
-                <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef>
-                        actions
-                    </th>
-                    <td mat-cell *matCellDef="let element" class="no-field-padding">
-                        <div class="icons">
-                            <button mat-button>
-                                <mat-icon class="delete-icon" (click)="deleteDiscipline(element._id, $event)">delete</mat-icon>
-                            </button>
-                            <button mat-button>
-                                <mat-icon class="delete-icon" (click)="editDiscipline(element._id, $event)">edit</mat-icon>
-                            </button>
-                        </div>
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="['name', 'teacher', 'actions']"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['name', 'teacher', 'actions']" (click)="getSelectedRow(row)"></tr>
-            </table>
+                    <ng-container matColumnDef="teacher">
+                        <th mat-header-cell *matHeaderCellDef>Teacher</th>
+                        <td mat-cell *matCellDef="let element">{{element.teacher}}</td>
+                        </ng-container>
+                    <ng-container matColumnDef="actions">
+                        <th mat-header-cell *matHeaderCellDef>
+                            actions
+                        </th>
+                        <td mat-cell *matCellDef="let element" class="no-field-padding">
+                            <div class="icons">
+                                <button mat-button>
+                                    <mat-icon class="delete-icon" (click)="deleteDiscipline(element._id, $event)">delete</mat-icon>
+                                </button>
+                                <button mat-button>
+                                    <mat-icon class="delete-icon" (click)="editDiscipline(element._id, $event)">edit</mat-icon>
+                                </button>
+                            </div>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="['name', 'teacher', 'actions']"></tr>
+                    <tr mat-row *matRowDef="let row; columns: ['name', 'teacher', 'actions']" (click)="getSelectedRow(row)"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons>
+                </mat-paginator>
+            </div>
         </div>
     <div>
 
